# taskmanager

./: .env  Cargo.toml  db.sql
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: error.rs  main.rs
common/: Cargo.toml
common/src/: data.rs
server/: Cargo.toml
server/src/: auth.rs  config.rs  data.rs  db.rs  error.rs  handler.rs  main.rs  notification.rs
server/src/migrations/: V1__initial.rs  V2__userenabled.rs  mod.rs
src/: data.rs  db.rs  error.rs  handler.rs  main.rs
tm/: Cargo.toml
tm/src/: argument.rs  main.rs
